# trab-ds

./: README.md  pyproject.toml
housing/: Untitled.ipynb  housing_ds.ipynb
titanic/: titanic_ds.ipynb
