[tool.poetry]
name = "trab-data-science"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gian.lepear@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.5"
pandas = "^2.2.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
